--- a/templates/event-details.html
+++ b/templates/event-details.html
@@ -13,7 +13,7 @@ Event Details
         
         <div class="clearfix">
             <h3>Event Name: {{ event.title }}</h3>
-            <p>From {{ event.start_time }} To {{ event.end_time }}</p>
+            <p>From <span style="color: gray;">{{ event.start_time }}</span> To <span style="color: gray;">{{ event.end_time }}</span></p>
             <hr>
             <p>{{ event.description }}</p>
         </div>
