--- a/templates/book_room.html
+++ b/templates/book_room.html
@@ -19,37 +19,21 @@
 
   {% block content %}
 helloooo
-<table class="form form-table">
-<form action="/your-name/" method="post">
+
+<form method="post">
     {% csrf_token %}
     {{ form }}
-    <tr><td colspan="2"><button type="submit" class="btn btn-info right"> Submit </button></td></tr>
-    
+  
+    <button class="btn btn-success" type="submit">Go</button>
 </form>
-</table>
 
-<div class="clearfix">
+{{allreq}}
 
-  <a class="btn btn-info right" href="{% url 'logout' %}"> Logout </a>
-<a class="btn btn-info right mr-2" href="{% url 'calendarapp:calendar' %}?{{ next_month }} "> Next Month >> </a>
-  <a class="btn btn-info right mr-2" href="{% url 'calendarapp:calendar' %}?{{ prev_month }}"> << Previous Month </a>
- 
-</div>
-
-<div style="color: rgb(4, 18, 58);">
-  {{ calendar }}
-</div>
   {% endblock %}
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-
+  
   {% block script %}
   {% endblock %}
 </body>
