--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -7,6 +7,9 @@
 	<a class="btn btn-info right mr-2" href="{% url 'calendarapp:calendar' %}?{{ next_month }} "> Next Month >> </a>
     <a class="btn btn-info right mr-2" href="{% url 'calendarapp:calendar' %}?{{ prev_month }}"> << Previous Month </a>
     <a class="btn btn-info right mr-2" href="{% url 'calendarapp:event_new' %}"> + New Event </a>
+    <a class="btn btn-info right mr-2" href="/pending_request_url"> Pending  Request </a>
+    <a class="btn btn-info right mr-2" href="/approved_request_url"> Approved Request </a>
+   
 </div>
 
 <div style="color: rgb(4, 18, 58);">
