--- a/templates/admin_calendar.html
+++ b/templates/admin_calendar.html
@@ -4,12 +4,13 @@
 <!-- Columns are always 50% wide, on mobile and desktop -->
 
 <div class="clearfix">
-    
-
+    <span class="left m-2" style="font-size: 20px;">Wellcome, {{ request.user }}</span>
+    <a class="btn btn-info right" href="{% url 'logout' %}"> Logout </a>
 	<a class="btn btn-info right mr-2" href="{% url 'calendarapp:calendar' %}?{{ next_month }} "> Next Month >> </a>
     <a class="btn btn-info right mr-2" href="{% url 'calendarapp:calendar' %}?{{ prev_month }}"> << Previous Month </a>
-    <a class="btn btn-info right mr-2" href="{% url 'calendarapp:event_new' %}"> + Book Now </a>
-   
+    <a class="btn btn-info right mr-2" href="{% url 'calendarapp:event_new' %}"> + New Event </a>
+    <a class="btn btn-info right mr-2" href="/pending_request_url"> Pending  Request </a>
+    <a class="btn btn-info right mr-2" href="/approved_request_url"> Approved Request </a>
    
 </div>
 
