--- a/templates/calendar_admin.html
+++ b/templates/calendar_admin.html
@@ -7,8 +7,10 @@
     <span class="left m-2" style="font-size: 20px;">Wellcome, {{ request.user }}</span>
     <a class="btn btn-info right" href="{% url 'logout' %}"> Logout </a>
 	<a class="btn btn-info right mr-2" href="{% url 'calendarapp:calendar' %}?{{ next_month }} "> Next Month >> </a>
+    <a class="btn btn-info right mr-2" href="{% url 'calendarapp:calendar' %}?{{Current_month}}">  Current Month </a>
     <a class="btn btn-info right mr-2" href="{% url 'calendarapp:calendar' %}?{{ prev_month }}"> << Previous Month </a>
-    <a class="btn btn-info right mr-2" href="{% url 'calendarapp:event_new' %}"> + New Event </a>
+    <!-- <a class="btn btn-info right mr-2" href="{% url 'calendarapp:event_new' %}"> + New Event </a> -->
+    <a class="btn btn-info right mr-2" href="/add_event"> + Book Now</a>
     <a class="btn btn-info right mr-2" href="/pending_request_url"> Pending  Request </a>
     <a class="btn btn-info right mr-2" href="/approved_request_url"> Approved Request </a>
    
