--- a/templates/event.html
+++ b/templates/event.html
@@ -28,8 +28,7 @@ Event
 </form>
 
   
-  
-<script>
+{% comment %} <script>
   $(function () {
     $("#id_start_time").datetimepicker();
   });
@@ -38,7 +37,7 @@ Event
 <script>
   $(function () {
     $("#id_end_time").datetimepicker();
-  });
-</script>
-</script>
+  }); 
+ </script>
+</script>  {% endcomment %}
 {% endblock %}
