--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,3 +68,9 @@
     padding: 5px;
     width: 100%;
   }
+
+  .datepicker {
+    position: relative !important;
+    top: -290px !important;
+    left: 0 !important;
+}
