--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -12,8 +12,45 @@ Event
 <form method="post">
   {% csrf_token %}
   <table class="form form-table">
-    {{ form }}
+  
+    {% for field in form %}
+{% if field.name == "user" or field.name == "is_approved" %}
+<p class="hide"> {{ field }} </p>
+{% elif field.name == "start_time" or field.name == "end_time" %}
+<tr>
+<td>{{ field.label }}</td>
+<td><input type="datetime-local" id="id_{{field.name}}" name="{{field.name}}"></td>
+</tr>
+{% else %}
+<tr>
+<td>{{ field.label }}</td>
+<td> {{ field }}</td>
+</tr>
+
+{% endif %}
+{% endfor %}
+
     <tr><td colspan="2"><button type="submit" class="btn btn-info right"> Submit </button></td></tr>
   </table>
 </form>
+
+{% comment %} <script>
+
+  $(function () {
+    
+    $("#id_start_time").datetimepicker();
+    
+    
+    });
+</script>
+
+<script>
+  $(function () {
+    $("#id_end_time").datetimepicker();
+  });
+</script>  {% endcomment %}
+
 {% endblock %}
+
+
+
