--- a/templates/calendar_admin.html
+++ b/templates/calendar_admin.html
@@ -11,6 +11,8 @@
     <a class="btn btn-info right mr-2" href="{% url 'calendarapp:calendar' %}?{{ prev_month }}"> << Previous Month </a>
     <!-- <a class="btn btn-info right mr-2" href="{% url 'calendarapp:event_new' %}"> + New Event </a> -->
     <a class="btn btn-info right mr-2" href="/add_event"> + Book Now</a>
+    <a class="btn btn-info right mr-2" href="/viewrooms"> + Edit Room</a>
+    
     <a class="btn btn-info right mr-2" href="/pending_request_url"> Pending  Request </a>
     <a class="btn btn-info right mr-2" href="/approved_request_url"> Approved Request </a>
    
