--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -83,7 +83,7 @@
                                             </div>
                                         </form>
                                         <div class="w-100">
-                                            <p class="mt-4">I'm already a member! <a href="{% url 'accounts:signin' %}">Sign In</a></p>
+                                            <p class="mt-4">I'm already a member! <a href="#signin">Sign In</a></p>
                                         </div>
                                     </div>
                                 </div>
