--- a/templates/accounts/signin.html
+++ b/templates/accounts/signin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	{% load static %}
     <head>
-        <title>Sign Up | Event Calendar</title>
+        <title>Sign In | Event Calendar</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -28,7 +28,7 @@
                                 <div class="row justify-content-center py-md-5">
                                     <div class="col-lg-9">
                                         <div class="social-wrap">
-                                            <h3 class="mb-3 text-center">Signup with this services</h3>
+                                            <h3 class="mb-3 text-center">Signin with this services</h3>
                                             <p class="social-media d-flex justify-content-center">
                                                 <a href="#" class="social-icon google d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a>
                                                 <a href="#" class="social-icon facebook d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a>
@@ -38,18 +38,19 @@
                                                 <span>or</span>
                                             </p>
                                         </div>
-                                        <form action="#" class="signup-form">
+                                        <form action="#" method="post" class="signup-form">
+                                            {% csrf_token %}
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="form-group">
                                                         <label class="label" for="email">Email Address</label>
-                                                        <input type="text" class="form-control" />
+                                                        {{ form.username }}
                                                     </div>
                                                 </div>
                                                 <div class="col-md-12">
                                                     <div class="form-group">
                                                         <label class="label" for="password">Password</label>
-                                                        <input type="password" class="form-control" />
+                                                        {{ form.password }}
                                                     </div>
                                                 </div>
                                                 <div class="col-md-12">
