add event dashboard

--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -10,7 +10,7 @@
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-        <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/accounts.css' %}" />
     </head>
     <body>
         <section class="ftco-section">
@@ -93,10 +93,6 @@
                 </div>
             </div>
         </section>
-
-        <script src="{% static 'js/jquery.min.js' %}"></script>
-        <script src="{% static 'js/popper.js' %}"></script>
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'js/main.js' %}"></script>
+        {% include 'base/js.html' %}
     </body>
 </html>
