--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -22,6 +22,8 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
         <!-- Font-icon css-->
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+        {% block extracss %}
+        {% endblock extracss %}
     </head>
     <body class="app sidebar-mini">
         <!-- Navbar-->
