--- a/templates/calendarapp/calendar.html
+++ b/templates/calendarapp/calendar.html
@@ -1,23 +1,23 @@
 {% extends 'base/base.html' %}
 {% load static %}
 
+{% block extracss %}
+<link href="{% static 'calender/main.css' %}" rel='stylesheet' />
+<script src="{% static 'calender/main.js' %}"></script>
+{% endblock extracss %}
+
 {% block content %}
 <div class="row">
   <div class="col-md-12">
     <div class="tile row">
       <div class="col-md-3">
         <div id="external-events">
-          <h4 class="mb-4">Draggable Events</h4>
+          <h4 class="mb-4">Events This Month</h4>
           <div class="fc-event">My Event 1</div>
           <div class="fc-event">My Event 2</div>
           <div class="fc-event">My Event 3</div>
           <div class="fc-event">My Event 4</div>
           <div class="fc-event">My Event 5</div>
-          <p class="animated-checkbox mt-20">
-            <label>
-              <input id="drop-remove" type="checkbox"><span class="label-text">Remove after drop</span>
-            </label>
-          </p>
         </div>
       </div>
       <div class="col-md-9">
@@ -29,47 +29,101 @@
 {% endblock content %}
 
 {% block extrascripts %}
-<script type="text/javascript" src="{% static 'js/plugins/moment.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/plugins/jquery-ui.custom.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/plugins/fullcalendar.min.js' %}"></script>
-<script type="text/javascript">
-  $(document).ready(function() {
-  
-    $('#external-events .fc-event').each(function() {
-  
-      // store data so the calendar knows to render an event upon drop
-      $(this).data('event', {
-        title: $.trim($(this).text()), // use the element's text as the event title
-        stick: true // maintain when user navigates (see docs on the renderEvent method)
-      });
-  
-      // make the event draggable using jQuery UI
-      $(this).draggable({
-        zIndex: 999,
-        revert: true,      // will cause the event to go back to its
-        revertDuration: 0  //  original position after the drag
-      });
-  
-    });
-  
-    $('#calendar').fullCalendar({
-      header: {
+
+<script>
+
+  document.addEventListener('DOMContentLoaded', function() {
+    var calendarEl = document.getElementById('calendar');
+
+    var calendar = new FullCalendar.Calendar(calendarEl, {
+      headerToolbar: {
         left: 'prev,next today',
         center: 'title',
-        right: 'month,agendaWeek,agendaDay'
+        right: 'dayGridMonth,timeGridWeek,timeGridDay'
+      },
+      initialDate: '2020-09-12',
+      navLinks: true, // can click day/week names to navigate views
+      selectable: true,
+      selectMirror: true,
+      select: function(arg) {
+        var title = prompt('Event Title:');
+        if (title) {
+          calendar.addEvent({
+            title: title,
+            start: arg.start,
+            end: arg.end,
+            allDay: arg.allDay
+          })
+        }
+        calendar.unselect()
+      },
+      eventClick: function(arg) {
+        if (confirm('Are you sure you want to delete this event?')) {
+          arg.event.remove()
+        }
       },
       editable: true,
-      droppable: true, // this allows things to be dropped onto the calendar
-      drop: function() {
-        // is the "remove after drop" checkbox checked?
-        if ($('#drop-remove').is(':checked')) {
-          // if so, remove the element from the "Draggable Events" list
-          $(this).remove();
+      dayMaxEvents: true, // allow "more" link when too many events
+      events: [
+        {
+          title: 'All Day Event',
+          start: '2020-09-01'
+        },
+        {
+          title: 'Long Event',
+          start: '2020-09-07',
+          end: '2020-09-10'
+        },
+        {
+          groupId: 999,
+          title: 'Repeating Event',
+          start: '2020-09-09T16:00:00'
+        },
+        {
+          groupId: 999,
+          title: 'Repeating Event',
+          start: '2020-09-16T16:00:00'
+        },
+        {
+          title: 'Conference',
+          start: '2020-09-11',
+          end: '2020-09-13'
+        },
+        {
+          title: 'Meeting',
+          start: '2020-09-12T10:30:00',
+          end: '2020-09-12T12:30:00'
+        },
+        {
+          title: 'Lunch',
+          start: '2020-09-12T12:00:00'
+        },
+        {
+          title: 'Meeting',
+          start: '2020-09-12T14:30:00'
+        },
+        {
+          title: 'Happy Hour',
+          start: '2020-09-12T17:30:00'
+        },
+        {
+          title: 'Dinner',
+          start: '2020-09-12T20:00:00'
+        },
+        {
+          title: 'Birthday Party',
+          start: '2020-09-13T07:00:00'
+        },
+        {
+          title: 'Click for Google',
+          url: 'http://google.com/',
+          start: '2020-09-28'
         }
-      }
+      ]
     });
-  
-  
+
+    calendar.render();
   });
+
 </script>
 {% endblock extrascripts %}
