--- a/templates/calendarapp/calendar.html
+++ b/templates/calendarapp/calendar.html
@@ -34,14 +34,15 @@
 
   document.addEventListener('DOMContentLoaded', function() {
     var calendarEl = document.getElementById('calendar');
+    var today = new Date();
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
       headerToolbar: {
         left: 'prev,next today',
         center: 'title',
-        right: 'dayGridMonth,timeGridWeek,timeGridDay'
+        right: 'dayGridMonth,timeGridWeek,timeGridDay,list'
       },
-      initialDate: '2020-09-12',
+      initialDate: today,
       navLinks: true, // can click day/week names to navigate views
       selectable: true,
       selectMirror: true,
@@ -57,6 +58,13 @@
         }
         calendar.unselect()
       },
+       // THIS KEY WON'T WORK IN PRODUCTION!!!
+      // To make your own Google API key, follow the directions here:
+      // http://fullcalendar.io/docs/google_calendar/
+      googleCalendarApiKey: 'AIzaSyCqCxjjLtjbtkX37aOtWB8OfwBLy_6QuYk',
+
+      // US Holidays
+      events: 'bn.bd#holiday@group.v.calendar.google.com',
       eventClick: function(arg) {
         if (confirm('Are you sure you want to delete this event?')) {
           arg.event.remove()
@@ -64,62 +72,62 @@
       },
       editable: true,
       dayMaxEvents: true, // allow "more" link when too many events
-      events: [
-        {
-          title: 'All Day Event',
-          start: '2020-09-01'
-        },
-        {
-          title: 'Long Event',
-          start: '2020-09-07',
-          end: '2020-09-10'
-        },
-        {
-          groupId: 999,
-          title: 'Repeating Event',
-          start: '2020-09-09T16:00:00'
-        },
-        {
-          groupId: 999,
-          title: 'Repeating Event',
-          start: '2020-09-16T16:00:00'
-        },
-        {
-          title: 'Conference',
-          start: '2020-09-11',
-          end: '2020-09-13'
-        },
-        {
-          title: 'Meeting',
-          start: '2020-09-12T10:30:00',
-          end: '2020-09-12T12:30:00'
-        },
-        {
-          title: 'Lunch',
-          start: '2020-09-12T12:00:00'
-        },
-        {
-          title: 'Meeting',
-          start: '2020-09-12T14:30:00'
-        },
-        {
-          title: 'Happy Hour',
-          start: '2020-09-12T17:30:00'
-        },
-        {
-          title: 'Dinner',
-          start: '2020-09-12T20:00:00'
-        },
-        {
-          title: 'Birthday Party',
-          start: '2020-09-13T07:00:00'
-        },
-        {
-          title: 'Click for Google',
-          url: 'http://google.com/',
-          start: '2020-09-28'
-        }
-      ]
+      // events: [
+      //   {
+      //     title: 'All Day Event',
+      //     start: '2020-09-01'
+      //   },
+      //   {
+      //     title: 'Long Event',
+      //     start: '2020-09-07',
+      //     end: '2020-09-10'
+      //   },
+      //   {
+      //     groupId: 999,
+      //     title: 'Repeating Event',
+      //     start: '2020-09-09T16:00:00'
+      //   },
+      //   {
+      //     groupId: 999,
+      //     title: 'Repeating Event',
+      //     start: '2020-09-16T16:00:00'
+      //   },
+      //   {
+      //     title: 'Conference',
+      //     start: '2020-09-11',
+      //     end: '2020-09-13'
+      //   },
+      //   {
+      //     title: 'Meeting',
+      //     start: '2020-09-12T10:30:00',
+      //     end: '2020-09-12T12:30:00'
+      //   },
+      //   {
+      //     title: 'Lunch',
+      //     start: '2020-09-12T12:00:00'
+      //   },
+      //   {
+      //     title: 'Meeting',
+      //     start: '2020-09-12T14:30:00'
+      //   },
+      //   {
+      //     title: 'Happy Hour',
+      //     start: '2020-09-12T17:30:00'
+      //   },
+      //   {
+      //     title: 'Dinner',
+      //     start: '2020-09-12T20:00:00'
+      //   },
+      //   {
+      //     title: 'Birthday Party',
+      //     start: '2020-09-13T07:00:00'
+      //   },
+      //   {
+      //     title: 'Click for Google',
+      //     url: 'http://google.com/',
+      //     start: '2020-09-28'
+      //   }
+      // ]
     });
 
     calendar.render();
