add event in dashboard

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -144,7 +144,7 @@
             </div>
             <ul class="app-menu">
                 <li>
-                    <a class="app-menu__item active" href="#"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Dashboard</span></a>
+                    <a class="app-menu__item active" href="{% url 'dashboard' %}"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Dashboard</span></a>
                 </li>
                 <li>
                     <a class="app-menu__item" href="{% url 'calendarapp:calendar' %}"><i class="app-menu__icon fa fa-pie-chart"></i><span class="app-menu__label">Calendar</span></a>
