--- a/templates/calendarapp/dashboard.html
+++ b/templates/calendarapp/dashboard.html
@@ -8,7 +8,7 @@
             <i class="icon fa fa-files-o fa-3x"></i>
             <div class="info">
                 <h4>Total Completed Events</h4>
-                <p><b>5</b></p>
+                <p><b>{{ total_event }}</b></p>
             </div>
         </div>
     </div>
